mejora del  ejemplo 43 a nivel de documentación